# c-switcher

./: LICENSE  README.md  README.zh-TW.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddModal.tsx  ConfirmDialog.tsx  ProfileRow.tsx  Toast.tsx  TopBar.tsx  UsageModal.tsx  VersionLabel.tsx
