[package]
name = "c-switcher"
version = "0.1.0"
description = "Claude Code Auth Token Switcher"
authors = ["wangejay"]
edition = "2021"

[lib]
name = "c_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "csw"
path = "src/bin/csw.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["process", "rt-multi-thread", "macros"] }
dirs = "6"
